# cmake.protobuf

./: CMakeLists.txt  README.md
go/: CMakeLists.txt  person.proto
go/cmake_modules/: go_generator.cmake
grpc_proto/: CMakeLists.txt  helloworld.proto
grpc_src/: CMakeLists.txt  grpc_server.cpp
proto/: CMakeLists.txt  acct.proto
src/: CMakeLists.txt  main.cpp
